# NeoToaster

./: .gitignore  Cargo.toml  LICENSE.md  README.md
neotoaster_commands/: Cargo.toml
neotoaster_commands/src/: groups.rs  lib.rs
neotoaster_commands/src/groups/: general.rs
neotoaster_commands/src/groups/yolol/: config.rs  mod.rs
neotoaster_commands/src/groups/yolol_wars/: mod.rs
neotoaster_database/: Cargo.toml  database.env
neotoaster_database/migrations/: 20210504002650_initial.sql
src/: handler.rs
