[package]
name = "neotoaster"
version = "0.1.0"
authors = ["Oscar (Matrixmage) <osmithsi@sfu.ca>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Jerald/NeoToaster"

[workspace]
members = ["neotoaster_commands"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neotoaster_commands = { path = "neotoaster_commands" }

serenity = "0.10.5"
tracing = "0.1.26"
tokio = { version = "1.5.0", features = ["full"] }
serenity_group_name = "0.1.0"
tracing-subscriber = "0.2.18"