[package]
name = "neotoaster_commands"
version = "0.1.0"
authors = ["Oscar (Matrixmage) <osmithsi@sfu.ca>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Jerald/NeoToaster"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.5"
tracing = "0.1.26"
serenity_group_name = "0.1.0"
tokio = { version = "1.5.0", features = ["full"] }

yoloxide = "0.4.4"
cylon_ast = "0.4.0"

regex = "1.5.3"
serde_json = "1.0.64"
lazy_static = "1.4.0"