[package]
name = "neotoaster_database"
version = "0.1.0"
authors = ["Oscar (Matrixmage) <osmithsi@sfu.ca>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Jerald/NeoToaster"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.2", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.5.0", features = ["full"] }

dotenv = "0.15.0"